--- a/Appology.MVC/Areas/ER/Views/Order/New.cshtml
+++ b/Appology.MVC/Areas/ER/Views/Order/New.cshtml
@@ -3,5 +3,6 @@
 @Html.Partial("_ReactApp", new ReactAppVM
 {
     App = "errandrunner",
+    Desc = "Errand Runner Controller Order App ©",
     Version = "1.0.1"
 })'
