--- a/Appology.MVC/Views/Home/Index.cshtml
+++ b/Appology.MVC/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@ else
     @Html.Partial("_ReactApp", new ReactAppVM
     {
         App = "fullcalendar",
-        Version = "5.0.1"
+        Desc = "MiCalendar App ©",
+        Version = "2.0.1"
     })
 }
