Write re-written in React app (removing jquery MVC page), Monzo cats style changes, react-components refactoring

--- a/Appology.React/Profile/src/components/app/App.css
+++ b/Appology.React/Profile/src/components/app/App.css
@@ -16,6 +16,10 @@
     color: #dc3545;
 }
 
+.nav-tabs {
+    border-bottom: 1px solid #dee2e6 !important
+}
+
 /* react bootstrap overrides */
 
 @media (max-width: 800px) {
