--- a/Appology.MVC/Areas/Finance/Views/App/Categories.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/App/Categories.cshtml
@@ -8,7 +8,7 @@
     }
 
 </style>
-<div class="content-shadow">
+<div id="root" class="content-shadow">
     <div class="content-inner">
         <h2>Spending Categories</h2>
 
@@ -34,7 +34,7 @@
                     <tr>
                         <td>
                             <i class='fas fa-@(cat.Disabled ? "remove" : hasSecondCategories)'></i>
-                            @cat.Name <span class="label label-primary">@cat.Id</span>
+                            @cat.Name <span class="badge badge-primary">@cat.Id</span>
                         </td>
                         <td>
                             <i class='fas fa-@(!string.IsNullOrEmpty(cat.SuperCategory) ? "star" : "")'></i> @(string.IsNullOrEmpty(cat.SuperCategory) ? "-" : cat.SuperCategory)
@@ -49,7 +49,7 @@
                         <tr>
                             <td style="text-indent: 1em;">
                                 <i class='fas fa-@(secondCat.Disabled ? "remove" : "tag")'></i>
-                                @secondCat.Name <span class="label label-info">@secondCat.Id</span>
+                                @secondCat.Name <span class="badge badge-info">@secondCat.Id</span>
                             </td>
                             <td>
                                 <i class='fas fa-@(!string.IsNullOrEmpty(secondCat.SuperCategory) ? "star" : "")'></i> @(string.IsNullOrEmpty(secondCat.SuperCategory) ? "-" : secondCat.SuperCategory)
@@ -85,7 +85,7 @@
                     <tr>
                         <td>
                             <i class='fas fa-@(cat.Disabled ? "remove" : hasSecondCategories)'></i>
-                            @cat.Name <span class="label label-primary">@cat.Id</span>
+                            @cat.Name <span class="badge badge-primary">@cat.Id</span>
                         </td>
                         <td>
                             <i class='fas fa-@hasSecondCategories'></i>
@@ -97,7 +97,7 @@
                         <tr>
                             <td style="text-indent: 1em;">
                                 <i class='fas fa-@(secondCat.Disabled ? "remove" : "tag")'></i>
-                                @secondCat.Name <span class="label label-info">@secondCat.Id</span>
+                                @secondCat.Name <span class="badge badge-info">@secondCat.Id</span>
                             </td>
                             <td style="text-indent: 1em;">
                                 <i class='fas fa-tag'></i>
