refactor micalendar and write into seperate modules/areas

--- a/Appology.MVC/Views/Home/ChangeLog.cshtml
+++ b/Appology.MVC/Views/Home/ChangeLog.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Appology.MiCalendar.Model.Document>
+﻿@model IEnumerable<Appology.Write.Model.Document>
 @{
     ViewBag.Title = "ChangeLog";
 }
