--- a/Appology.MVC/Views/Account/Index.cshtml
+++ b/Appology.MVC/Views/Account/Index.cshtml
@@ -22,6 +22,11 @@
         @Html.Partial("_Status", new BaseVM { UpdateStatus = (Status.Info, "To accept invitation you must login") })
     }
 
+    @if (Model.DocId.HasValue)
+    {
+        @Html.Partial("_Status", new BaseVM { UpdateStatus = (Status.Info, "To view this document you must login") })
+    }
+
     <div id="formContent">
 
         <div id="login">
@@ -33,8 +38,8 @@
                 @Html.AntiForgeryToken()
                 @Html.TextBoxFor(x => x.Email, new { id = "email", @class = "login login-form-input fadeIn second", placeholder = "Enter email", @required = "required" })
                 @Html.PasswordFor(x => x.Password, new { id = "password", @class = "login login-form-input fadeIn third", placeholder = "Enter password", @required = "required" })
-                @Html.HiddenFor(x => x.InviteeId, new { id= "inviteeId" }  )
-
+                @Html.HiddenFor(x => x.InviteeId, new { id = "inviteeId" })
+                @Html.HiddenFor(x => x.DocId, new { id = "docId" })
                 <button type="submit" class="login fadeIn fourth">Enter App</button>
             }
         </div>
@@ -43,14 +48,14 @@
                 <i class="fas fa-user-plus fa-3x"></i>
             </div>
             @using (Html.BeginForm("Register"))
-                {
-                    @Html.AntiForgeryToken()
-                    <input type="text" id="r-name" class="login form-input fadeIn second" name="name" placeholder="Enter name" required>
-                    <input type="text" id="r-email" class="login form-input fadeIn second" name="email" placeholder="Enter login email" required>
-                    <input type="password" id="r-password" class="login form-input fadeIn third" name="password" placeholder="Enter password" required>
-                    <input type="password" id="r-password-confirm" class="login form-input fadeIn third" placeholder="Confirm password" required>
-                    <button type="button" class="login fadeIn fourth" onclick="alert('Registration currently disabled')">Signup</button>
-                }
+            {
+                @Html.AntiForgeryToken()
+                <input type="text" id="r-name" class="login form-input fadeIn second" name="name" placeholder="Enter name" required>
+                <input type="text" id="r-email" class="login form-input fadeIn second" name="email" placeholder="Enter login email" required>
+                <input type="password" id="r-password" class="login form-input fadeIn third" name="password" placeholder="Enter password" required>
+                <input type="password" id="r-password-confirm" class="login form-input fadeIn third" placeholder="Confirm password" required>
+                <button type="button" class="login fadeIn fourth" onclick="alert('Registration currently disabled')">Signup</button>
+            }
         </div>
 
         <div id="formFooter">
@@ -83,7 +88,8 @@
                     __RequestVerificationToken: token,
                     email: $("#email").val(),
                     password: $("#password").val(),
-                    inviteeId: $("#inviteeId").val()
+                    inviteeId: $("#inviteeId").val(),
+                    docId: $("#docId").val(),
                 },
                 url: "@Url.MvcRouteUrl(Section.LoginSubmit)",
                 success: function (response) {
