--- a/Appology.MVC/Content/Site.css
+++ b/Appology.MVC/Content/Site.css
@@ -216,11 +216,39 @@ textarea {
     .content-inner {
         padding: 5px;
     }
-
 }
 
 .pull-right {
     float: right;
 }
 
+.write-header {
+    margin-top: 10px;
+}
+
+h4 {
+    overflow: hidden;
+    text-align: center;
+}
+
+h4:before,
+h4:after {
+    background-color: #333;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
+}
+
+h4:before {
+    right: 0.5em;
+    margin-left: -50%;
+}
+
+h4:after {
+    left: 0.5em;
+    margin-right: -50%;
+}
 
