Fixes Cronofy/Appology calendar sync integration

--- a/Appology.MVC/Areas/Calendar/Views/Cronofy/Calendar.cshtml
+++ b/Appology.MVC/Areas/Calendar/Views/Cronofy/Calendar.cshtml
@@ -30,7 +30,7 @@
                     @(calEvent.Start.HasTime ? calEvent.Start.DateTimeOffset.ToString() : calEvent.Start.Date.ToString())
                 </td>
                 <td>
-                    <a href="/cronofy/event/@calEvent.EventUid">
+                    <a href="/calendar/cronofy/event/@calEvent.EventUid">
                         View
                     </a>
                 </td>
